# decopin_hand

./: .gitignore  CMakeLists.txt  README.md  package.xml  temp.launch
cfg/: DecopinHand.cfg
config/: fetch.rviz  yamaguchi_dynamixel.yaml
docker/: Dockerfile
euslisp/: decopin-interface.l  decopin-kontrol.l  decopin.l  decopin_hand_interface.l  decopin_hand_kontrol.l  decopin_hand_utils.l  decopin_hand_view.l  hear-max-sound.l  pen-knock.l  place-garbage.l  sandpaper.l  water-in-bottle.l
euslisp/demo/: close-door.l  cool-tea.l  fix-finger.l  gesture-5.l  (+7 more)
launch/: audio_to_spectrogram.launch  bringup_remote.launch  classify_action.launch  classify_action_static.launch  color_filter.launch  decopin_hand_kontrol.launch  dynamixel_controllers.launch  mic_and_motor.launch  record_action.launch  record_audio_rosbag.launch  record_noise.launch  save_action.launch  save_noise.launch  show_histogram.launch  speech_recognition.launch  usb_mic.launch
model/: create_eus_model.sh  decopin_hand.urdf  decopin_hand.yaml
msg/: InAction.msg
node_scripts/: action_detector.py  audio_capture_pyaudio.py  noise_saver.py
scripts/: action_classifier.py  action_detector.py  action_detector_histogram.py  action_detector_volume.py  action_saver.py  continuous_filter.py  create_dataset.py  gesture_filter.py  noise_saver.py  noise_subtractor.py  normalize_gray_image.py  preprocess_gray_image.py  process_example.py  process_gray_image.py  save_example.py  sph0645_audio.py  train.py  visualize_dataset.py  visualize_spectrogram_process.py
src/: dynamixel_workbench_controllers.cpp
(+14 files in other folders)
