<?xml version="1.0"?>
<package format="2">
  <name>decopin_hand</name>
  <version>2.0.0</version>
  <description>
    This package to use decopin_hand including actuation and vibration sensing
  </description>
  <license>Apache 2.0</license>
  <author email="708yamaguchi@gmail.com">Naoya Yamaguchi</author>
  <maintainer email="708yamaguchi@gmail.com">Naoya Yamaguchi</maintainer>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>dynamixel_workbench_controllers</depend>
  <depend>dynamixel_workbench_msgs</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <depend>cmake_modules</depend>
  <depend>yaml-cpp</depend>
  <depend>eigen</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <!-- apt exec depend -->
  <exec_depend>python-pyaudio</exec_depend>
  <!-- pip exec depend -->
  <!-- <exec_depend>imgaug-pip</exec_depend> -->
  <!-- for python2.x, use 2.6.x of python-imageio -->
  <exec_depend>python-imageio</exec_depend>
  <!-- for nanoKONTROL2 -->
  <exec_depend>python-pygame</exec_depend>

  <exec_depend>image_view</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>

</package>
